= 1.38 (10 September 2024) =
* Enhancement: Few enhancement #129

= 1.37 (30 Aug 2024) =
* Fixed: No Active subscriber found when sending push notification #124

= 1.36 (24 Aug 2024) =
* Fixed: conflict with superpwa #121
* Fixed: CSV file not working properly. #114
* Added: Added a feature to clean the logs in the Campaign tab in the dashboard #117
* Enhancement: Few improvements required #122
* Enhancement: Test with WordPress version 6.6

= 1.35 (06 June 2024) =
* Fixed: On the install banner, the yes or no option is not showing.  #112
* Fixed: Php error's on user end. #111

= 1.34 (31 May 2024) =
* Added: Ability to change default Notification icon URL #90
* Added: Option to customise the push notification banner. #76
* Enhancement: Add loader on campaigns pagination #92
* Enhancement : Make checkboxes selection on its label clicked #91
* Fixed: Notice: Trying to get property 'slug' of non-object #97
* Fixed: Conflict issue with ultimate membership notification. #109

= 1.33.1 (09 May 2024) =
Fixed: Issue with plugin activation. #103

= 1.33 (16 March 2024) =
* Added: Notification types preview with selection #86 #79
* Added: Copy token on click #89
* Added: Select2 for category segmentation #84
* Added: Active site limitation on pro token #81
* Enhancement : Code improvement #82

= 1.32 (02 February 2024) =
* Added: New feature send notification for a specific/individual post-publication #29
* Added: Show subscribers (active and expired) separately.#72 
* Added: Provide email field in support form #78 
* Enhancement : Code improvement #82
* Fixed: Notification Apostrophe issue and spelling error.#80
* Fixed: Plugin is not being deactivated on multisite #83 
* Fixed: Conflict issue with campaigns #73
* Enhancement: Test with WordPress 6.4 and update readme.txt #77

= 1.31 (30 October 2023) =
* Added: Added Option to export Users from User's section in push notification #57.
* Added: Added a filter/ function to send a push notification to specific users. #67.